@@ -2,6 +2,8 @@
 
 	* inst/include/spdlog/*: New upstream release spdlog 1.8.2
 
+	* .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docs/: Added package website
